--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
               </table>
         </center>
     </main>
+    Bezczelnie skradzione od <a href="https://czop.ru/">MrTalon63</a>. Pliki hostowane na <a href="http://wyslij.se/">Wyslij.se</a>
 </body>
 </html>
