--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
     <main>
         <center>
-            <h1>Indeks plików publicznych</h1>
+            <h1>Moje pliki</h1>
             <br>
             <br>
             <table class="table table-dark table-striped text-white" style="width: 25%;">
@@ -28,15 +28,15 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td><a href="/emotki">emotki</a></td>
+                    <td><a href="emotki.html">emotki</a></td>
                     <td>-</td>
                   </tr>
                   <tr>
-                    <td><a href="/programy">programy</a></td>
+                    <td><a href="programy.html">programy</a></td>
                     <td>-</td>
                   </tr>
                   <tr>
-                    <td><a href="/memy">memy</a></td>
+                    <td><a href="memy.html">memy</a></td>
                     <td>-</td>
                   </tr>
                   <tr>
@@ -44,9 +44,9 @@
                     <td>-</td>
                   </tr>
                 </tbody>
-              </table>
-        </center>
+            </table>
     </main>
     Bezczelnie skradzione od <a href="https://czop.ru/">MrTalon63</a>. Pliki hostowane na <a href="http://wyslij.se/">Wyslij.se</a>
+        </center>
 </body>
 </html>
