--- a/emotki.html
+++ b/emotki.html
@@ -17,7 +17,7 @@
     <main>
         <center>
             <h1><a target="_blank" href=""></a>Zakładka <code>Emotki</code></h1>
-            <a href="/">Wstecz</a>
+            <a href="https://driverpl.github.io/kupa/">Wstecz</a>
             <br>
             <br>
             <table class="table table-dark table-striped text-white" style="width: 30%;">
@@ -34,6 +34,7 @@
                   </tr>
                 </tbody>
               </table>
+                Bezczelnie skradzione od <a href="https://czop.ru/">MrTalon63</a>. Pliki hostowane na <a href="http://wyslij.se/">Wyslij.se</a>
         </center>
     </main>
 </body>
